home page improved

--- a/explore.html
+++ b/explore.html
@@ -139,7 +139,7 @@
   <main>
     <div class="main-wrapper">
       <div class="content-container">
-        <h1 class="main-heading">More To Explore</h1>
+        <h1 class="main-heading">More to explore</h1>
         <section class="section-container">
           <div class="blue info-box" id="item-1">
             <h2 class="info-box-heading">For Kids</h2>
