--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/fbd3401b24.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-  <link rel="stylesheet" href="styles/home.css" />
+  <link rel="stylesheet" href="styles/index.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
   <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
   <!-- <script>
@@ -138,36 +138,32 @@
   </header>
 
   <main>
-    <div class="background-container">
-      <div class="main-wrappe">
-        <section class="main-content">
-          <hgroup>
-            <h1>EXPLORE 1000+ EXHIBITIONS</h1>
-            <h2>entrance is <em>FREE FOR ALL</em></h2>
-            <h2><em>GUIDED TOUR</em> every hour:</h2>
-          </hgroup>
-          <div class="button">
-            <a href="https://www.ticketmaster.com/">
-              <p class="button">BUY TICKETS</p>
-            </a>
-          </div>
-        </section>
-        <a href="about_us.html">
-          <div class="bubble">
-            <div class="arrow-up"></div>
-            <h3>Let Us Explore Together</h3>
-            <div id="about">
-              <p>Learn more ABOUT US and our VISION</p>
-              <span class="fa fa-arrow-circle-right"></span>
-            </div>
-            <div class="arrow-down"></div>
-          </div>
+    <div class="hero-container">
+      <section class="hero-content">
+        <hgroup>
+          <h1>EXPLORE 1000+ EXHIBITIONS</h1>
+          <h2>entrance is <em>FREE FOR ALL</em></h2>
+          <h2><em>GUIDED TOUR</em> every hour:</h2>
+        </hgroup>
+        <a href="https://www.ticketmaster.com/" class="button main-button">
+          BUY TICKETS
         </a>
-      </div>
+      </section>
+      <a href="about_us.html">
+        <div class="speech-bubble">
+          <div class="arrow-up"></div>
+          <h3>Let Us Explore Together</h3>
+          <div id="about">
+            <p>Learn more ABOUT US and our VISION</p>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+          <div class="arrow-down"></div>
+        </div>
+      </a>
     </div>
     <div class="fading-background_1"></div>
     <div class="fading-background_2"></div>
-    <div class="background-container-2">
+    <div class="categories-container">
       <section class="categories">
         <div class="color-box" id="cosmology">
           <a href="exhibitions.html#cosmology-anchor">
@@ -221,131 +217,131 @@
       </div>
     </div>
 
-    <div class="secondary-container">
-      <section class="news-section">
-        <div id="news-anchor"></div>
-        <h4 id="special-event">NEWS: Special Events & Exhibitions</h4>
+    <div class="main-wrapper">
+      <div class="content-container">
+        <section class="news-section">
+          <div id="news-anchor"></div>
+          <h4 id="special-event" class="main-heading">NEWS: Special Events & Exhibitions</h4>
 
-        <div class="container">
-          <div class="carousel">
-            <div class="slider">
-              <section>
-                <figure class="slider-image">
-                  <img class="slider-image" src="images\t-rex.jpg"
-                    alt="Close up photo of the head of a of gaping T-Rex skeleton, exposing all it's razor-sharp teeth" />
-                </figure>
-                <div class="news">
-                  <div>
-                    <h5>Night in the Museum</h5>
-                    <p>
-                      Get your family together for an exciting night in the
-                      museum as you sleep over beside dinosaurs and science
-                      displays.
-                    </p>
-                    <p>
-                      Bring your own sleeping bag and get ready to rough it as
-                      we go exploring the wonders of science.
-                    </p>
+          <div class="container">
+            <div class="carousel">
+              <div class="slider">
+                <section>
+                  <figure class="slider-image">
+                    <img class="slider-image" src="images\t-rex.jpg"
+                      alt="Close up photo of the head of a of gaping T-Rex skeleton, exposing all it's razor-sharp teeth" />
+                  </figure>
+                  <div class="news">
+                    <div>
+                      <h5>Night in the Museum</h5>
+                      <p>
+                        Get your family together for an exciting night in the
+                        museum as you sleep over beside dinosaurs and science
+                        displays.
+                      </p>
+                      <p>
+                        Bring your own sleeping bag and get ready to rough it as
+                        we go exploring the wonders of science.
+                      </p>
+                    </div>
                   </div>
-                </div>
-              </section>
+                </section>
 
-              <section>
-                <figure class="slider-image">
-                  <img class="slider-image" src="images\aeronautic.jpg"
-                    alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments" />
-                </figure>
+                <section>
+                  <figure class="slider-image">
+                    <img class="slider-image" src="images\aeronautic.jpg"
+                      alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments" />
+                  </figure>
 
-                <div class="news">
-                  <div>
-                    <h5>Visiting Professor Of Aeronautics</h5>
-                    <p>
-                      It is our pleasure to announce that Professor Sheila
-                      Widnall from the Massachusetts Institute of Technology
-                      will visit our museum.
-                    </p>
-                    <p>
-                      She will be delivering two lectures on the development
-                      of aeronautics, and where the future lies in this
-                      exciting space.
-                    </p>
+                  <div class="news">
+                    <div>
+                      <h5>Visiting Professor Of Aeronautics</h5>
+                      <p>
+                        It is our pleasure to announce that Professor Sheila
+                        Widnall from the Massachusetts Institute of Technology
+                        will visit our museum.
+                      </p>
+                      <p>
+                        She will be delivering two lectures on the development
+                        of aeronautics, and where the future lies in this
+                        exciting space.
+                      </p>
+                    </div>
                   </div>
-                </div>
-              </section>
+                </section>
 
-              <section>
-                <figure class="slider-image">
-                  <img class="slider-image" src="images\energica.jpg"
-                    alt="Close up photo of a glowing red sphere with beams of electricity radiating from it" />
-                </figure>
-                <div class="news">
-                  <div>
-                    <h5>Energica Exhibition</h5>
-                    <p>
-                      On loan from the NEMO Science Museum in Amsterdam, the
-                      Energetica exhibition is coming to the Community Science
-                      Museum.
-                    </p>
-                    <p>
-                      It’s a series of installations that allow visitors to
-                      experience the power of the elements as we harness them.
-                      From solar energy powering lighting, to ‘Wind Island’
-                      that shows how turbines are able to use and control wind
-                      to create power.
-                    </p>
+                <section>
+                  <figure class="slider-image">
+                    <img class="slider-image" src="images\energica.jpg"
+                      alt="Close up photo of a glowing red sphere with beams of electricity radiating from it" />
+                  </figure>
+                  <div class="news">
+                    <div>
+                      <h5>Energica Exhibition</h5>
+                      <p>
+                        On loan from the NEMO Science Museum in Amsterdam, the
+                        Energetica exhibition is coming to the Community Science
+                        Museum.
+                      </p>
+                      <p>
+                        It’s a series of installations that allow visitors to
+                        experience the power of the elements as we harness them.
+                        From solar energy powering lighting, to ‘Wind Island’
+                        that shows how turbines are able to use and control wind
+                        to create power.
+                      </p>
+                    </div>
                   </div>
-                </div>
-              </section>
+                </section>
+              </div>
+              <div class="controls">
+                <figure id="left">
+                  <i id="arrow-left" class="fas fa-chevron-left"></i>
+                </figure>
+                <figure id="right">
+                  <i id="arrow-right" class="fas fa-chevron-right"></i>
+                </figure>
+              </div>
             </div>
-            <div class="controls">
-              <figure id="left">
-                <i id="arrow-left" class="fas fa-chevron-left"></i>
-              </figure>
-              <figure id="right">
-                <i id="arrow-right" class="fas fa-chevron-right"></i>
-              </figure>
+            <div class="preview">
+              <img id="preview1" class="preview-image selected" src="images\t-rex.jpg" alt="" />
+              <img id="preview2" class="preview-image" src="images\aeronautic.jpg" alt="" />
+              <img id="preview3" class="preview-image" src="images\energica.jpg" alt="" />
             </div>
           </div>
-          <div class="preview">
-            <img id="preview1" class="preview-image selected" src="images\t-rex.jpg" alt="" />
-            <img id="preview2" class="preview-image" src="images\aeronautic.jpg" alt="" />
-            <img id="preview3" class="preview-image" src="images\energica.jpg" alt="" />
+        </section>
+        <section class="clubs">
+          <h4 id="clubs" class="main-heading">Join One of Our Children Clubs</h4>
+          <div class="image-wrapper">
+            <figure class="clubs">
+              <a href="explore.html#club-anchor"><img src="images\club_1.jpg"
+                  alt="A group of five children aged 8-9 is watching a chemistry experiment involving expanding blue scum, with great excitement." />
+                <figcaption class="clubs">The Young Stars Club</figcaption>
+              </a>
+            </figure>
+            <figure class="clubs">
+              <a href="explore.html#club-anchor"><img src="images\club_2.jpg"
+                  alt="A boy and a girl aged 12 are in full concentration when they are collaborating to build a small robot-machine on wheels." />
+                <figcaption class="clubs">The Holiday Club</figcaption>
+              </a>
+            </figure>
           </div>
-        </div>
-      </section>
-      <section class="clubs">
-        <h4 id="clubs">Join One of Our Children Clubs</h4>
-        <div class="image-wrapper">
-          <figure class="clubs">
-            <a href="explore.html#club-anchor"><img src="images\club_1.jpg"
-                alt="A group of five children aged 8-9 is watching a chemistry experiment involving expanding blue scum, with great excitement." />
-              <figcaption class="clubs">The Young Stars Club</figcaption>
-            </a>
-          </figure>
-          <figure class="clubs">
-            <a href="explore.html#club-anchor"><img src="images\club_2.jpg"
-                alt="A boy and a girl aged 12 are in full concentration when they are collaborating to build a small robot-machine on wheels." />
-              <figcaption class="clubs">The Holiday Club</figcaption>
-            </a>
-          </figure>
-        </div>
-        <!-- <p>Click Images to Learn More</p> -->
-      </section>
-    </div>
-    <div class="bottom-section">
+          <!-- <p>Click Images to Learn More</p> -->
+        </section>
+      </div>
+
       <div class="newsletter-wrapper">
         <div class="blur">
           <section class="newsletter">
             <label for="newsletter">
-              Sign up to our Newsletter and be the first to know about Our
-              exciting New stuff:
+              Sign up to our <em>newsletter</em> and be the first to know about our
+              exciting <em>new stuff</em>:
             </label>
             <div class="newsletter-success">
               Welcome! Please check your inbox
             </div>
             <form class="newsletter">
-              <input id="newsletter" type="text" name="email" placeholder="YOUR EMAIL" />
-
+              <input id="newsletter" type="text" name="email" placeholder="your e-mail" />
               <input id="sign-up" type="submit" name="subscribe" value="SIGN UP" />
             </form>
             <p id="newsletter-error" class="error-message">
