category section improved

--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
 
   <main>
     <div class="hero-container">
-      <section class="hero-content">
+      <div class="hero-content">
         <hgroup>
-          <h1>EXPLORE 1000+ EXHIBITIONS</h1>
+          <h1>EXPLORE 1000+ <br />EXHIBITIONS</h1>
           <h2>entrance is <em>FREE FOR ALL</em></h2>
           <h2><em>GUIDED TOUR</em> every hour:</h2>
         </hgroup>
-        <a href="https://www.ticketmaster.com/" class="button main-button">
+        <a href="https://www.ticketmaster.com/" class="button hero-button">
           BUY TICKETS
         </a>
-      </section>
+      </div>
       <a href="about_us.html">
         <div class="speech-bubble">
           <div class="arrow-up"></div>
@@ -164,57 +164,74 @@
     <div class="fading-background_1"></div>
     <div class="fading-background_2"></div>
     <div class="categories-container">
-      <section class="categories">
-        <div class="color-box" id="cosmology">
+      <section class="categories-section">
+        <div class="category-box" id="cosmology">
+          
           <a href="exhibitions.html#cosmology-anchor">
-            <figure id="planet">
+            <div class="category-box-content">
+            <figure id="planet" class="category-icon">
               <img src="images/icons/planet_white.png" alt="icon of a planet" />
             </figure>
-            <figcaption>COSMOLOGY</figcaption>
+            <figcaption class="category-caption">COSMOLOGY</figcaption>
+            </div>
           </a>
         </div>
-        <div class="color-box" id="evolution">
+
+        <div class="category-box" id="evolution">
           <a href="exhibitions.html#evolution-anchor">
-            <figure><span class="fa fa-dna"></span></figure>
-            <figcaption>EVOLUTION</figcaption>
+            <div class="category-box-content">
+              <figure class="category-icon"><span class="fa fa-dna"></span></figure>
+              <figcaption class="category-caption">EVOLUTION</figcaption>
+            </div>
           </a>
         </div>
-        <div class="color-box" id="biology">
+
+        <div class="category-box" id="biology">
           <a href="exhibitions.html#biology-anchor">
-            <figure><span class="fa fa-microscope"></span></figure>
-            <figcaption>BIOLOGY & MEDICINE</figcaption>
+            <div class="category-box-content">
+              <figure class="category-icon"><span class="fa fa-microscope"></span></figure>
+              <figcaption class="category-caption">BIOLOGY & MEDICINE</figcaption>
+            </div>
           </a>
         </div>
-        <div class="color-box" id="robotics">
+        <div class="category-box" id="robotics">
           <a href="exhibitions.html#robotics-anchor">
-            <figure><span class="fa fa-robot"></span></figure>
-            <figcaption>ROBOTICS & AI</figcaption>
+            <div class="category-box-content">
+              <figure class="category-icon"><span class="fa fa-robot"></span></figure>
+              <figcaption class="category-caption">ROBOTICS & AI</figcaption>
+            </div>
           </a>
         </div>
-        <div class="color-box" id="ecology">
+        <div class="category-box" id="ecology">
           <a href="exhibitions.html#ecology-anchor">
-            <figure><span class="fa fa-globe-americas"></span></figure>
-            <figcaption>ECOLOGY</figcaption>
+            <div class="category-box-content">
+              <figure class="category-icon"><span class="fa fa-globe-americas"></span></figure>
+              <figcaption class="category-caption">ECOLOGY</figcaption>
+            </div>
           </a>
         </div>
-        <div class="color-box" id="events">
+        <div class="category-box" id="events">
           <a href="#news-anchor">
-            <figure><span class="fa fa-rocket"></span></figure>
-            <figcaption>SPECIAL EVENTS</figcaption>
+            <div class="category-box-content">
+              <figure class="category-icon"><span class="fa fa-rocket"></span></figure>
+              <figcaption class="category-caption">SPECIAL EVENTS</figcaption>
+            </div>
           </a>
         </div>
       </section>
-      <div class="clock">
-        <span class="fa fa-clock"></span>
-        <p>OPEN TODAY UNTIL 16:00</p>
-      </div>
-      <div class="ticketmaster">
-        <p id="tour">Guided Tour 70 NOK per Person</p>
-        <p id="tickets">Online Tickets Provided by:</p>
-        <figure id="ticketmaster">
-          <img src="images\icons\Ticketmaster-Logo-White.svg" alt="Ticketmaster logo" />
-        </figure>
-      </div>
+      <section class="info-section">
+        <div class="clock">
+          <span class="fa fa-clock"></span>
+          <p>OPEN TODAY UNTIL 16:00</p>
+        </div>
+        <div class="ticketmaster">
+          <p id="tour">Guided Tour 70 NOK per Person</p>
+          <p id="tickets">Online Tickets Provided by:</p>
+          <figure id="ticketmaster-logo">
+            <img src="images\icons\Ticketmaster-Logo-White.svg" alt="Ticketmaster logo" />
+          </figure>
+        </div>
+      </section>
     </div>
 
     <div class="main-wrapper">
