--- a/index.html
+++ b/index.html
@@ -140,24 +140,21 @@
   <main>
     <div class="hero-container">
       <div class="hero-content">
-        <hgroup>
-          <h1>EXPLORE 1000+ <br />EXHIBITIONS</h1>
-          <h2>entrance is <em>FREE FOR ALL</em></h2>
-          <h2><em>GUIDED TOUR</em> every hour:</h2>
-        </hgroup>
+        <!-- <hgroup> -->
+        <h1>EXPLORE <em>more than 1000</em> EXHIBITIONS</h1>
+        <!-- <h2>entrance is <em>FREE FOR ALL</em></h2>
+          <h2><em>GUIDED TOUR</em> every hour:</h2> -->
+        <!-- </hgroup> -->
         <a href="https://www.ticketmaster.com/" class="button hero-button">
           BUY TICKETS
         </a>
       </div>
       <a href="about_us.html">
         <div class="speech-bubble">
-          <div class="arrow-up"></div>
-          <h3>Let Us Explore Together</h3>
-          <div id="about">
+          <div class="speech-bubble-arrow"></div>
+          <h3 class="speech-bubble-caption">Let Us Explore Together</h3>
             <p>Learn more ABOUT US and our VISION</p>
             <span class="fa fa-arrow-circle-right"></span>
-          </div>
-          <div class="arrow-down"></div>
         </div>
       </a>
     </div>
@@ -166,13 +163,13 @@
     <div class="categories-container">
       <section class="categories-section">
         <div class="category-box" id="cosmology">
-          
+
           <a href="exhibitions.html#cosmology-anchor">
             <div class="category-box-content">
-            <figure id="planet" class="category-icon">
-              <img src="images/icons/planet_white.png" alt="icon of a planet" />
-            </figure>
-            <figcaption class="category-caption">COSMOLOGY</figcaption>
+              <figure id="planet" class="category-icon">
+                <img src="images/icons/planet_white.png" alt="icon of a planet" />
+              </figure>
+              <figcaption class="category-caption">COSMOLOGY</figcaption>
             </div>
           </a>
         </div>
