--- a/explore.html
+++ b/explore.html
@@ -16,22 +16,6 @@
   <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
   <link rel="stylesheet" href="styles/explore.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
-  <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
-  <!-- <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 2270629, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script> -->
 </head>
 
 <body>
@@ -41,9 +25,9 @@
         <figure class="logo">
           <a href="index.html"><img src="images\cms-logo.png" alt="Community Science Museum logo" /></a>
         </figure>
-        <nav aria-label="icons" class="icons">
+        <nav aria-label="icons" class="nav-icons-wrapper">
           <div class="dropdown-wrapper">
-            <i class="fa fa-search icon"></i>
+            <i class="fa fa-search nav-icon"></i>
             <div class="search-dropdown">
               <p class="search-header">search results</p>
               <form action="" class="dropdown-form">
@@ -57,7 +41,7 @@
           </div>
 
           <div class="dropdown-wrapper">
-            <i class="fa fa-ticket-alt icon"></i>
+            <i class="fa fa-ticket-alt nav-icon"></i>
             <div class="ticket-dropdown">
               <p class="ticket-header">buy ticket</p>
               <p class="dropdown-text">
@@ -84,7 +68,7 @@
           </div>
 
           <div class="dropdown-wrapper">
-            <i class="fa fa-user-circle icon"></i>
+            <i class="fa fa-user-circle nav-icon"></i>
             <div class="profile-dropdown">
               <p class="profile-header">your account</p>
               <form class="dropdown-form" id="profile-form">
