clubs section improved

--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
               <figure class="clubs">
                 <a href="explore.html#club-anchor"><img src="images\club_1.jpg"
                     alt="A group of five children aged 8-9 is watching a chemistry experiment involving expanding blue scum, with great excitement." />
-                  <figcaption class="clubs">The Young Stars Club</figcaption>
+                  <figcaption class="clubs-caption">The Young Stars Club</figcaption>
                 </a>
               </figure>
               <figure class="clubs">
                 <a href="explore.html#club-anchor"><img src="images\club_2.jpg"
                     alt="A boy and a girl aged 12 are in full concentration when they are collaborating to build a small robot-machine on wheels." />
-                  <figcaption class="clubs">The Holiday Club</figcaption>
+                  <figcaption class="clubs-caption">The Holiday Club</figcaption>
                 </a>
               </figure>
             </div>
